fix: adjust paddings and gap

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
     display: grid;
     grid-template-rows: repeat(3, auto);
     place-items: center;
-    row-gap: 24px;
+    row-gap: 26px;
 }
 
 /*PROFILE IMAGE*/
@@ -101,7 +101,7 @@ body {
     place-items: center;
     row-gap: 18px;
     width: 100%;
-    margin-top: 4px;
+    margin-top: 6px;
 }
 
 /*BUTTONS*/
@@ -111,7 +111,7 @@ body {
     font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     color: white;
-    padding: 10px;
+    padding: 11px;
     border-radius: 10px;
     border: none;
     cursor: pointer;
